plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.erp'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Web
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.3.3'

	// MySQL
	implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.4.0'

	// Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

	// Lombok
	compileOnly 'org.projectlombok:lombok:1.18.34'
	annotationProcessor 'org.projectlombok:lombok:1.18.34'

	// test
	testRuntimeOnly 'com.h2database:h2:2.2.224'
	testCompileOnly 'org.projectlombok:lombok:1.18.34'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.3'
	testImplementation("com.navercorp.fixturemonkey:fixture-monkey-starter:1.0.24")
	testImplementation 'com.google.code.gson:gson:2.11.0'
	testImplementation 'net.datafaker:datafaker:2.4.0'
}

tasks.named('test') {
	useJUnitPlatform()
}
